--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -5,11 +5,11 @@
 	display: inline-block;
 	.l-col1{
 		float:left;
-		width: 20%;
+		width: 40%;
 	}
 
 	.l-col2{
-		float:right;
-		width: 70%;
+		float:left;
+		width: 50%;
 	}
 }
