Added pages 'login' and 'login-error'

--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -3,13 +3,14 @@
 .l{
 	width: 100%;
 	display: inline-block;
+	margin-bottom: 50px;
 	.l-col1{
 		float:left;
-		width: 40%;
+		width: 686px;
 	}
 
 	.l-col2{
 		float:left;
-		width: 50%;
+		width: 280px;
 	}
 }
