--- a/css/screen.css
+++ b/css/screen.css
@@ -24,9 +24,9 @@ a { color: #00919e; }
 .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { clear: both; }
 
 /* default layout */
-.l { width: 100%; display: inline-block; }
-.l .l-col1 { float: left; width: 40%; }
-.l .l-col2 { float: left; width: 50%; }
+.l { width: 100%; display: inline-block; margin-bottom: 50px; }
+.l .l-col1 { float: left; width: 686px; }
+.l .l-col2 { float: left; width: 280px; }
 
 .icon-2gis, .header__logo a, .alt .header__logo a { font: 0/0 a; text-shadow: none; color: transparent; }
 
@@ -45,15 +45,23 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon { vertical-align: middle; display: inline-block; }
 
-.icon-login { background: url('../img/icons-s2200c886bc.png') 0 -291px no-repeat; width: 9px; height: 12px; }
+.icon-login { background: url('../img/icons-s0457d22b47.png') 0 -424px no-repeat; width: 9px; height: 12px; }
 
-.icon-search { background: url('../img/icons-s2200c886bc.png') 0 -269px no-repeat; width: 12px; height: 12px; }
+.icon-search { background: url('../img/icons-s0457d22b47.png') 0 -384px no-repeat; width: 12px; height: 12px; }
 
-.icon-url { background: url('../img/icons-s2200c886bc.png') 0 -185px no-repeat; width: 12px; height: 12px; }
+.icon-url { background: url('../img/icons-s0457d22b47.png') 0 -240px no-repeat; width: 12px; height: 12px; }
 
-.icon-location { background: url('../img/icons-s2200c886bc.png') 0 -247px no-repeat; width: 7px; height: 12px; }
+.icon-location { background: url('../img/icons-s0457d22b47.png') 0 -362px no-repeat; width: 7px; height: 12px; }
 
-.icon-2gis { background: url('../img/icons-s2200c886bc.png') 0 -160px no-repeat; width: 30px; height: 15px; }
+.icon-2gis { background: url('../img/icons-s0457d22b47.png') 0 -160px no-repeat; width: 30px; height: 15px; }
+
+.icon-fb { background: url('../img/icons-s0457d22b47.png') 0 -332px no-repeat; width: 20px; height: 20px; }
+
+.icon-tw { background: url('../img/icons-s0457d22b47.png') 0 -215px no-repeat; width: 21px; height: 15px; }
+
+.icon-vk { background: url('../img/icons-s0457d22b47.png') 0 -262px no-repeat; width: 20px; height: 20px; }
+
+.icon-od { background: url('../img/icons-s0457d22b47.png') 0 -185px no-repeat; width: 20px; height: 20px; }
 
 .topper { height: 30px; line-height: 30px; background: #2c3d51; color: #ddd; padding-right: 85px; }
 
@@ -68,15 +76,15 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .topper__profile li { list-style: none; float: left; margin-left: 10px; }
 .topper__profile li:first-child { margin-left: 0; }
 .topper__profile li.is-active a { color: #fff; }
-.topper__profile li.is-active a .icon-login { background: url('../img/icons-s2200c886bc.png') 0 -313px no-repeat; width: 9px; height: 12px; }
+.topper__profile li.is-active a .icon-login { background: url('../img/icons-s0457d22b47.png') 0 -446px no-repeat; width: 9px; height: 12px; }
 .topper__profile a { color: #cfb300; text-decoration: none; }
 .topper__profile a:hover { color: #fff; }
-.topper__profile a:hover .icon-login { background: url('../img/icons-s2200c886bc.png') 0 -313px no-repeat; width: 9px; height: 12px; }
+.topper__profile a:hover .icon-login { background: url('../img/icons-s0457d22b47.png') 0 -446px no-repeat; width: 9px; height: 12px; }
 
 .header { padding: 25px 50px 37px 70px; background: #fff; }
 
 .header__logo { float: left; margin-right: 20px; }
-.header__logo a { display: block; background: url('../img/icons-s2200c886bc.png') 0 0 no-repeat; width: 197px; height: 70px; }
+.header__logo a { display: block; background: url('../img/icons-s0457d22b47.png') 0 0 no-repeat; width: 197px; height: 70px; }
 
 .header__search { position: relative; float: left; vertical-align: middle; height: 60px; line-height: 60px; padding: 0 10px; margin-top: 9px; border-radius: 5px; background: #ecf0f1; font-size: 15px; color: #2c3b53; width: 760px; }
 .header__search:before { content: ""; position: absolute; display: block; border-style: solid; border-color: transparent #ecf0f1 transparent transparent; top: 50%; left: -5px; margin-top: -5px; border-width: 5px 5px 5px 0; }
@@ -115,11 +123,11 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .catalog__list { margin-right: 23px; margin-left: 20px; }
 .catalog__list li { position: relative; list-style: none; margin-bottom: 8px; line-height: 1.2; }
-.catalog__list li:before { background: url('../img/icons-s2200c886bc.png') 0 -227px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
+.catalog__list li:before { background: url('../img/icons-s0457d22b47.png') 0 -312px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
 .catalog__list li a { font-size: 15px; color: #2c3a52; text-decoration: none; border-bottom: 1px dotted #2c3a52; }
 .catalog__list li a:hover { color: #2c3a52; text-decoration: none; border-bottom: 1px dotted transparent; }
 .catalog__list li.active { position: relative; }
-.catalog__list li.active:before { background: url('../img/icons-s2200c886bc.png') 0 -207px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
+.catalog__list li.active:before { background: url('../img/icons-s0457d22b47.png') 0 -292px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
 .catalog__list li.active a { border-bottom: 1px dotted #e7c400; color: #e7c400; text-decoration: none; }
 .catalog__list li.active a:hover { text-decoration: none; color: #e7c400; border-bottom: 1px dotted transparent; }
 .catalog__list li.active li:before { content: none; }
@@ -163,14 +171,14 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .alt .out { min-height: 100%; height: auto !important; height: 100%; margin: 0 0 -142px 140px; z-index: 0; }
 .alt .header { padding-top: 25px; margin-left: -100px; background: #fff; }
 .alt .header__logo { float: left; margin-right: 20px; }
-.alt .header__logo a { display: block; background: url('../img/icons-s2200c886bc.png') 0 -80px no-repeat; width: 119px; height: 70px; }
+.alt .header__logo a { display: block; background: url('../img/icons-s0457d22b47.png') 0 -80px no-repeat; width: 119px; height: 70px; }
 .alt .footer { position: relative; height: 142px; width: 260px; color: #7f8c8d; font-size: 13px; margin-left: 100px; }
 .alt .auth__title { margin-bottom: 30px; position: relative; }
 .alt .auth__title p { font-size: 20px; color: #666; }
 .alt .title { color: #2c3d51; font-size: 36px; display: inline-block; }
 .alt .footer, .alt .push { height: 142px; }
 .alt .form { -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background: #ecf0f1; padding: 20px 0 0 0; width: 427px; }
-.alt .form input { width: 98%; height: 40px; line-height: 40px; padding: 0 1%; }
+.alt .form input { width: 97%; height: 40px; line-height: 40px; padding: 0 1%; }
 .alt .form a { font-size: 13px; color: #2c3d51; text-decoration: none; }
 .alt .form a:hover { text-decoration: underline; }
 .alt .form__wrap { margin: 0 30px; }
@@ -180,12 +188,30 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .alt .formline__error .form__label { font-size: 14px; color: #ea4f2f; display: inline-block; margin-bottom: 0.2em; }
 .alt .formline__error input { color: #ea4f2f; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; border: 1px solid #eee; border-color: rgba(236, 82, 107, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6); }
 .alt .formline__error input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-color: 0; border: 1px solid #eee; }
+.alt .formline__error .form__controls { position: relative; }
+.alt .formline__error .form__controls:after { background: url('../img/icons-s0457d22b47.png') 0 -406px no-repeat; width: 8px; height: 8px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
+.alt .formline__error .form__errorifno { position: absolute; width: 140px; top: 5px; right: -185px; font-size: 13px; color: #ea4f2f; }
+.alt .formline__error .form__errorifno a { font-size: 13px; color: #ea4f2f; text-decoration: underline; }
+.alt .formline__error .form__errorifno a:hover { text-decoration: none; }
+.alt .sidebar { background: none; width: auto; position: relative; padding: 0; top: 0; bottom: 0; margin-left: 25px; }
 
 .btn-warining { -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background: #e7c200; color: #fff; font-size: 13px; font-weight: bold; text-decoration: none; height: 30px; line-height: 30px; display: inline-block; padding: 0 19px; position: relative; top: -20px; left: 20px; text-transform: uppercase; }
 
 .btn-success { cursor: pointer; border-radius: 0 0 4px 4px; text-transform: uppercase; color: #ebf0f1; font-weight: bold; background: #00be9a; display: inline-block; width: 100%; border: none; height: 60px; line-height: 60px; }
 
 .btn-inactive { border-radius: 0 0 4px 4px; text-transform: uppercase; color: #ebf0f1; font-weight: bold; background: #bdc3c7; display: inline-block; width: 100%; border: none; height: 60px; line-height: 60px; }
+
+.socials { margin-top: 107px; }
+.socials .h1 { text-transform: uppercase; color: #7f8c8d; font-size: 9px; font-weight: normal; }
+.socials ul { margin-top: 20px; }
+.socials li { list-style: none; text-transform: lowercase; font-size: 16px; color: #4a63ac; margin-bottom: 15px; }
+.socials a { text-decoration: none; }
+.socials a:hover { text-decoration: underline; }
+.socials .icon { margin-right: 6px; }
+.socials .socials__fb a { color: #4a63ac; }
+.socials .socials__tw a { color: #27a9e4; }
+.socials .socials__vk a { color: #2c4670; }
+.socials .socials__od a { color: #e57f18; }
 
 .icon-2gis, .header__logo a, .alt .header__logo a { font: 0/0 a; text-shadow: none; color: transparent; }
 
