--- a/css/eugene.css
+++ b/css/eugene.css
@@ -1,11 +1,25 @@
-.sidebar { -webkit-transition: all 500ms linear; -moz-transition: all 500ms linear; -o-transition: all 500ms linear; transition: all 500ms linear; }
+.sidebar { -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -o-transition: all 300ms linear; transition: all 300ms linear; }
 .sidebar .push { height: 140px; }
 .sidebar .catalog { margin-bottom: -140px; min-height: 100%; }
 .sidebar .footer { position: relative; }
 
+.baron__scrollerbar:hover, .baron__scrollerbar:active { background: #d6d6d6; }
+
 .sidebar.is-hidden { left: -367px; }
 
 .sidebar-key { position: absolute; top: 50%; right: -21px; margin-top: -20px; width: 22px; height: 40px; line-height: 40px; background: #fcfcfc; border: 0; cursor: pointer; -webkit-border-radius: 0 3px 3px 0; -moz-border-radius: 0 3px 3px 0; -ms-border-radius: 0 3px 3px 0; -o-border-radius: 0 3px 3px 0; border-radius: 0 3px 3px 0; }
-.sidebar-key i { display: inline-block; background: url('../img/icons-sd7984a5fe3.png') 0 -275px no-repeat; width: 7px; height: 10px; }
+.sidebar-key i { display: inline-block; background: url('../img/icons-s573ec8c7f8.png') 0 -275px no-repeat; width: 7px; height: 10px; }
 
-.sidebar-key.is-active i { background: url('../img/icons-sd7984a5fe3.png') 0 -255px no-repeat; width: 7px; height: 10px; }
+.sidebar-key.is-active i { background: url('../img/icons-s573ec8c7f8.png') 0 -255px no-repeat; width: 7px; height: 10px; }
+
+.search { margin-left: 20px; }
+.search li { list-style-type: none; }
+
+.sticker { display: inline-block; padding: 7px 9px; }
+
+.sticker_yellow { background: #ffc700; color: #fff; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
+
+.accordion__title { position: relative; display: inline-block; color: #2c3d51; cursor: pointer; line-height: 1; font-size: 14px; border-bottom: 1px dotted; }
+.accordion__title i { position: absolute; left: -14px; top: 5px; background: url('../img/icons-s573ec8c7f8.png') 0 -309px no-repeat; width: 7px; height: 4px; }
+
+.accordion__title.is-active i { background: url('../img/icons-s573ec8c7f8.png') 0 -295px no-repeat; width: 7px; height: 4px; }
