--- a/css/screen.css
+++ b/css/screen.css
@@ -42,15 +42,15 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 
 .icon { vertical-align: middle; display: inline-block; }
 
-.icon-login { background: url('../img/icons-sd7984a5fe3.png') 0 -211px no-repeat; width: 9px; height: 12px; }
+.icon-login { background: url('../img/icons-s573ec8c7f8.png') 0 -211px no-repeat; width: 9px; height: 12px; }
 
-.icon-search { background: url('../img/icons-sd7984a5fe3.png') 0 -189px no-repeat; width: 12px; height: 12px; }
+.icon-search { background: url('../img/icons-s573ec8c7f8.png') 0 -189px no-repeat; width: 12px; height: 12px; }
 
-.icon-url { background: url('../img/icons-sd7984a5fe3.png') 0 -105px no-repeat; width: 12px; height: 12px; }
+.icon-url { background: url('../img/icons-s573ec8c7f8.png') 0 -105px no-repeat; width: 12px; height: 12px; }
 
-.icon-location { background: url('../img/icons-sd7984a5fe3.png') 0 -167px no-repeat; width: 7px; height: 12px; }
+.icon-location { background: url('../img/icons-s573ec8c7f8.png') 0 -167px no-repeat; width: 7px; height: 12px; }
 
-.icon-2gis { background: url('../img/icons-sd7984a5fe3.png') 0 -80px no-repeat; width: 30px; height: 15px; }
+.icon-2gis { background: url('../img/icons-s573ec8c7f8.png') 0 -80px no-repeat; width: 30px; height: 15px; }
 
 .topper { height: 30px; line-height: 30px; background: #2c3d51; color: #ddd; padding-right: 85px; }
 
@@ -65,15 +65,15 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 .topper__profile li { list-style: none; float: left; margin-left: 10px; }
 .topper__profile li:first-child { margin-left: 0; }
 .topper__profile li.is-active a { color: #fff; }
-.topper__profile li.is-active a .icon-login { background: url('../img/icons-sd7984a5fe3.png') 0 -233px no-repeat; width: 9px; height: 12px; }
+.topper__profile li.is-active a .icon-login { background: url('../img/icons-s573ec8c7f8.png') 0 -233px no-repeat; width: 9px; height: 12px; }
 .topper__profile a { color: #cfb300; text-decoration: none; }
 .topper__profile a:hover { color: #fff; }
-.topper__profile a:hover .icon-login { background: url('../img/icons-sd7984a5fe3.png') 0 -233px no-repeat; width: 9px; height: 12px; }
+.topper__profile a:hover .icon-login { background: url('../img/icons-s573ec8c7f8.png') 0 -233px no-repeat; width: 9px; height: 12px; }
 
 .header { padding: 25px 50px 37px 70px; background: #fff; }
 
 .header__logo { float: left; margin-right: 20px; }
-.header__logo a { display: block; background: url('../img/icons-sd7984a5fe3.png') 0 0 no-repeat; width: 197px; height: 70px; }
+.header__logo a { display: block; background: url('../img/icons-s573ec8c7f8.png') 0 0 no-repeat; width: 197px; height: 70px; }
 
 .header__search { position: relative; float: left; vertical-align: middle; height: 60px; line-height: 60px; padding: 0 10px; margin-top: 9px; border-radius: 5px; background: #ecf0f1; font-size: 15px; color: #2c3b53; width: 760px; }
 .header__search:before { content: ""; position: absolute; display: block; border-style: solid; border-color: transparent #ecf0f1 transparent transparent; top: 50%; left: -5px; margin-top: -5px; border-width: 5px 5px 5px 0; }
@@ -113,11 +113,11 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 
 .catalog__list { margin-right: 23px; margin-left: 20px; }
 .catalog__list li { position: relative; list-style: none; margin-bottom: 8px; line-height: 1.2; }
-.catalog__list li:before { background: url('../img/icons-sd7984a5fe3.png') 0 -147px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
+.catalog__list li:before { background: url('../img/icons-s573ec8c7f8.png') 0 -147px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
 .catalog__list li a { font-size: 15px; color: #2c3a52; text-decoration: none; border-bottom: 1px dotted #2c3a52; }
 .catalog__list li a:hover { color: #2c3a52; text-decoration: none; border-bottom: 1px dotted transparent; }
 .catalog__list li.active { position: relative; }
-.catalog__list li.active:before { background: url('../img/icons-sd7984a5fe3.png') 0 -127px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
+.catalog__list li.active:before { background: url('../img/icons-s573ec8c7f8.png') 0 -127px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
 .catalog__list li.active a { border-bottom: 1px dotted #e7c400; color: #e7c400; text-decoration: none; }
 .catalog__list li.active a:hover { text-decoration: none; color: #e7c400; border-bottom: 1px dotted transparent; }
 .catalog__list li.active li:before { content: none; }
@@ -182,14 +182,28 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 .topper:before, .header:before, .header__search:before, .header__links:before, .topper:after, .header:after, .header__search:after, .header__links:after { content: " "; display: table; }
 .topper:after, .header:after, .header__search:after, .header__links:after { clear: both; }
 
-.sidebar { -webkit-transition: all 500ms linear; -moz-transition: all 500ms linear; -o-transition: all 500ms linear; transition: all 500ms linear; }
+.sidebar { -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -o-transition: all 300ms linear; transition: all 300ms linear; }
 .sidebar .push { height: 140px; }
 .sidebar .catalog { margin-bottom: -140px; min-height: 100%; }
 .sidebar .footer { position: relative; }
 
+.baron__scrollerbar:hover, .baron__scrollerbar:active { background: #d6d6d6; }
+
 .sidebar.is-hidden { left: -367px; }
 
 .sidebar-key { position: absolute; top: 50%; right: -21px; margin-top: -20px; width: 22px; height: 40px; line-height: 40px; background: #fcfcfc; border: 0; cursor: pointer; -webkit-border-radius: 0 3px 3px 0; -moz-border-radius: 0 3px 3px 0; -ms-border-radius: 0 3px 3px 0; -o-border-radius: 0 3px 3px 0; border-radius: 0 3px 3px 0; }
-.sidebar-key i { display: inline-block; background: url('../img/icons-sd7984a5fe3.png') 0 -275px no-repeat; width: 7px; height: 10px; }
+.sidebar-key i { display: inline-block; background: url('../img/icons-s573ec8c7f8.png') 0 -275px no-repeat; width: 7px; height: 10px; }
 
-.sidebar-key.is-active i { background: url('../img/icons-sd7984a5fe3.png') 0 -255px no-repeat; width: 7px; height: 10px; }
+.sidebar-key.is-active i { background: url('../img/icons-s573ec8c7f8.png') 0 -255px no-repeat; width: 7px; height: 10px; }
+
+.search { margin-left: 20px; }
+.search li { list-style-type: none; }
+
+.sticker { display: inline-block; padding: 7px 9px; }
+
+.sticker_yellow { background: #ffc700; color: #fff; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
+
+.accordion__title { position: relative; display: inline-block; color: #2c3d51; cursor: pointer; line-height: 1; font-size: 14px; border-bottom: 1px dotted; }
+.accordion__title i { position: absolute; left: -14px; top: 5px; background: url('../img/icons-s573ec8c7f8.png') 0 -309px no-repeat; width: 7px; height: 4px; }
+
+.accordion__title.is-active i { background: url('../img/icons-s573ec8c7f8.png') 0 -295px no-repeat; width: 7px; height: 4px; }
