--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -200,7 +200,7 @@ input{
 			font-size: 13px;
 			color: #fff;
 			background: #95a5a6;
-			padding: 0 25px;
+			width: 108px;
 			height: 40px;
 			line-height: 40px;
 			text-transform: uppercase;
