--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -740,6 +740,8 @@ input{
 	border: none;
 	height: 60px;
 	line-height: 60px;
+	text-align: center;
+	text-decoration: none;
 }
 .btn-inactive{
 	border-radius: 0 0 4px 4px;
