--- a/css/eugene.css
+++ b/css/eugene.css
@@ -12,14 +12,41 @@
 
 .sidebar-key.is-active i { background: url('../img/icons-s01a0c7efb4.png') 0 -490px no-repeat; width: 7px; height: 10px; }
 
-.search { margin-left: 20px; }
+.search { margin-right: 40px; margin-left: 20px; }
 .search li { list-style-type: none; }
 
 .sticker { display: inline-block; padding: 7px 9px; }
 
 .sticker_yellow { background: #ffc700; color: #fff; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
 
-.accordion__title { position: relative; display: inline-block; color: #2c3d51; cursor: pointer; line-height: 1; font-size: 14px; border-bottom: 1px dotted; }
+.accordion .h1 { font-weight: bold; font-size: 12px; color: #2c3d51; }
+
+.accordion__title { margin-top: 15px; position: relative; display: inline-block; color: #2c3d51; cursor: pointer; line-height: 1; font-size: 14px; border-bottom: 1px dotted; }
 .accordion__title i { position: absolute; left: -14px; top: 5px; background: url('../img/icons-s01a0c7efb4.png') 0 -544px no-repeat; width: 7px; height: 4px; }
 
 .accordion__title.is-active i { background: url('../img/icons-s01a0c7efb4.png') 0 -530px no-repeat; width: 7px; height: 4px; }
+
+.accordion__body { position: relative; background: #ecf0f1; border-radius: 4px; padding: 10px 10px 0 10px; margin-top: 10px; margin-bottom: 20px; }
+.accordion__body:before { position: absolute; content: ""; top: -5px; left: 30px; width: 0px; height: 0px; border-style: solid; border-width: 0 5px 5px 5px; border-color: transparent transparent #ecf0f1 transparent; }
+.accordion__body ul { margin-bottom: 5px; }
+.accordion__body ul span { color: #7f8c8c; }
+.accordion__body .btn-success { margin: 0 0 0 -10px; width: 109%; line-height: 30px; height: 30px; }
+
+.search__result li { list-style-type: decimal; color: #7f8c8c; margin-bottom: 20px; }
+.search__result a { color: #96a1a1; text-decoration: none; }
+.search__result a:hover { text-decoration: underline; }
+.search__result .title { color: #2c3d51; font-size: 14px; font-weight: normal; line-height: 1.2; margin-bottom: 5px; }
+.search__result .title a { color: #2c3d51; font-size: 14px; font-weight: normal; line-height: 1.2; text-decoration: none; border-bottom: 1px dotted; }
+.search__result .title a:hover { border-bottom: 1px dotted transparent; }
+
+.search__result-item { color: #000; }
+
+.search__result-info__wrap { background: #eff7f6; padding: 10px; border-radius: 4px; margin-bottom: 5px; }
+.search__result-info__wrap a { color: #277eba; text-decoration: underline; }
+.search__result-info__wrap a:hover { text-decoration: none; }
+
+.search__result-info { margin-bottom: 5px; }
+
+.search__result-description { color: #7f8c8d; margin-bottom: 5px; }
+
+.search__result-tags { color: #7f8c8d; }
