--- a/sass/eugene.scss
+++ b/sass/eugene.scss
@@ -44,6 +44,7 @@
 	}
 }
 .search {
+	margin-right: 40px;
 	margin-left: 20px;
 	li {
 		list-style-type: none;
@@ -59,9 +60,14 @@
 	@include border-radius(4px);
 }
 .accordion {
-	
+	.h1{
+		font-weight: bold;
+		font-size: 12px;
+		color: #2c3d51;
+	}
 }
 .accordion__title {
+	margin-top: 15px;
 	position: relative;
 	display: inline-block;
 	color: #2c3d51;
@@ -81,3 +87,94 @@
 		@include sized-sprite($icons, arr4);
 	}
 }
+.accordion__body{
+	position: relative;
+	background: #ecf0f1;
+	border-radius: 4px;
+	padding: 10px 10px 0 10px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	&:before{
+		position: absolute;
+		content: "";
+		top: -5px;
+		left: 30px;
+		width: 0px;
+		height: 0px;
+		border-style: solid;
+		border-width: 0 5px 5px 5px;
+		border-color: transparent transparent #ecf0f1 transparent;
+	}
+	ul{
+		margin-bottom: 5px;
+		span{
+			color: #7f8c8c;
+		}
+	}
+	.btn-success{
+		margin: 0 0 0 -10px;
+		width: 109%;
+		line-height: 30px;
+		height: 30px;
+	}
+}
+
+.search__result{
+	li{
+		list-style-type: decimal;
+		color: #7f8c8c;
+		margin-bottom: 20px;
+	}
+	a{
+		color: #96a1a1;
+		text-decoration: none;
+		&:hover{
+			text-decoration: underline;
+		}
+	}
+	.title{
+		color: #2c3d51;
+		font-size: 14px;
+		font-weight: normal;
+		line-height: 1.2;
+		margin-bottom: 5px;
+		a{
+			color: #2c3d51;
+			font-size: 14px;
+			font-weight: normal;
+			line-height: 1.2;
+			text-decoration: none;
+			border-bottom: 1px dotted;
+			&:hover{
+				border-bottom: 1px dotted transparent;
+			}
+		}
+	}
+}
+	.search__result-item{
+		color: #000;
+	}
+
+	.search__result-info__wrap{
+		background: #eff7f6;
+		padding: 10px;
+		border-radius: 4px;
+		margin-bottom: 5px;
+		a{
+			color: #277eba;
+			text-decoration: underline;
+			&:hover{
+				text-decoration: none;
+			}
+		}
+	}
+		.search__result-info{
+			margin-bottom: 5px;
+		}
+	.search__result-description{
+		color: #7f8c8d;
+		margin-bottom: 5px;
+	}
+	.search__result-tags{
+		color: #7f8c8d;
+	}
