--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -14,3 +14,20 @@
 		width: 280px;
 	}
 }
+// content
+.content{
+
+}
+// <aside>
+.sidebar{
+	position: relative;
+	padding-right: 22px;
+	float: left;
+	overflow: hidden;
+}
+.sidebar__wrap {
+	position: relative;
+	padding-left: 87px;
+	width: 280px;
+	background: #fcfcfc;
+}
