--- a/css/screen.css
+++ b/css/screen.css
@@ -28,6 +28,10 @@ a { color: #00919e; }
 .l .l-col1 { float: left; width: 686px; }
 .l .l-col2 { float: left; width: 280px; }
 
+.sidebar { position: relative; padding-right: 22px; float: left; overflow: hidden; }
+
+.sidebar__wrap { position: relative; padding-left: 87px; width: 280px; background: #fcfcfc; }
+
 .icon-2gis, .header__logo a, .alt .header__logo a { font: 0/0 a; text-shadow: none; color: transparent; }
 
 .topper, .header, .header__search, .header__links, .alt .header { *zoom: 1; }
@@ -40,7 +44,7 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 
 .out { position: relative; z-index: 1000; }
 
-input { border: 1px solid #eee; outline: 0; -webkit-transition: border linear 0.2s, box-shadow linear 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -ms-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
+input { border: 1px solid #eeeeee; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
 input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
 
 .icon { vertical-align: middle; display: inline-block; }
@@ -113,11 +117,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .header__links-popup-wrap { position: relative; }
 .header__links-popup-wrap:before { content: ""; position: absolute; top: -15px; left: 50%; margin-left: -5px; width: 0px; height: 0px; border-style: solid; border-width: 0 5.5px 5px 5.5px; border-color: transparent transparent #2c3b53 transparent; }
 
-.sidebar { background: #fcfcfc; width: 280px; position: fixed; top: 162px; bottom: 0; padding-left: 87px; }
-
-.catalog { height: 100%; }
-
-.catalog__title { margin-top: 12px; margin-bottom: 17px; font-size: 9px; color: #7f8c8c; text-transform: uppercase; }
+.catalog__title { padding-top: 12px; margin-bottom: 17px; font-size: 9px; color: #7f8c8c; text-transform: uppercase; }
 .catalog__title a { color: #7f8c8c; text-decoration: underline; }
 .catalog__title a:hover { text-decoration: none; }
 
@@ -138,7 +138,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .catalog__list li ul li a { font-size: 14px; color: #287ebb; text-decoration: underline; border-bottom: 1px dotted transparent; }
 .catalog__list li ul li a:hover { text-decoration: none; border-bottom: 1px dotted transparent; }
 
-.footer { position: fixed; bottom: 0; height: 140px; width: 260px; color: #7f8c8d; font-size: 13px; }
+.footer { height: 170px; width: 260px; color: #7f8c8d; font-size: 13px; }
 .footer a { color: #7f8c8d; }
 .footer a:hover { text-decoration: none; }
 
@@ -191,8 +191,8 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .alt .formline__success .form__controls { position: relative; }
 .alt .formline__success .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -362px no-repeat; width: 14px; height: 12px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
 .alt .formline__error .form__label { font-size: 14px; color: #ea4f2f; display: inline-block; margin-bottom: 0.2em; }
-.alt .formline__error input { color: #ea4f2f; outline: 0; -webkit-transition: border linear 0.2s, box-shadow linear 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -ms-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; border: 1px solid #eee; border-color: rgba(236, 82, 107, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6); }
-.alt .formline__error input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-color: 0; border: 1px solid #eee; }
+.alt .formline__error input { color: #ea4f2f; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; border: 1px solid #eeeeee; border-color: rgba(236, 82, 107, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6); }
+.alt .formline__error input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-color: 0; border: 1px solid #eeeeee; }
 .alt .formline__error .form__controls { position: relative; }
 .alt .formline__error .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -428px no-repeat; width: 8px; height: 8px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
 .alt .formline__error .form__errorifno { position: absolute; width: 140px; top: 5px; right: -185px; font-size: 12px; color: #ea4f2f; }
@@ -223,7 +223,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .topper:before, .header:before, .header__search:before, .header__links:before, .alt .header:before, .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { content: " "; display: table; }
 .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { clear: both; }
 
-.baron__in { display: inline-block; vertical-align: top; position: relative; overflow: hidden; height: 60%; margin-left: -20px; text-align: left; }
+.baron__in { display: inline-block; position: relative; overflow: hidden; height: 100%; text-align: left; }
 
 .baron__scroller { height: 100%; overflow-y: scroll; }
 .baron__scroller::-webkit-scrollbar { width: 0; }
@@ -232,7 +232,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .baron__scrollerbar-wrapper { position: absolute; z-index: 1; top: 10px; bottom: 10px; right: 7px; width: 8px; border-radius: 5px; pointer-events: none; }
 
-.baron__scrollerbar { position: absolute; z-index: 1; display: none; width: 8px; cursor: pointer; min-height: 50px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background: #ecf0f1; opacity: 1; -webkit-transition: width .2s linear; transition: width .2s linear; pointer-events: auto; }
+.baron__scrollerbar { position: absolute; z-index: 1; display: none; width: 8px; cursor: pointer; min-height: 50px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background: #ecf0f1; opacity: 1; -webkit-transition: width 0.2s linear; transition: width 0.2s linear; pointer-events: auto; }
 .baron__scrollerbar:hover { opacity: .8; }
 
 .icon-2gis, .header__logo a, .alt .header__logo a { font: 0/0 a; text-shadow: none; color: transparent; }
@@ -240,11 +240,6 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .topper, .header, .header__search, .header__links, .alt .header { *zoom: 1; }
 .topper:before, .header:before, .header__search:before, .header__links:before, .alt .header:before, .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { content: " "; display: table; }
 .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { clear: both; }
-
-.sidebar { -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -ms-transition: all 300ms linear; -o-transition: all 300ms linear; transition: all 300ms linear; }
-.sidebar .push { height: 140px; }
-.sidebar .catalog { margin-bottom: -140px; min-height: 100%; }
-.sidebar .footer { position: relative; }
 
 .baron__scrollerbar:hover, .baron__scrollerbar:active { background: #d6d6d6; }
 
