--- a/sass/eugene.scss
+++ b/sass/eugene.scss
@@ -1,16 +1,6 @@
 @import "lib/base";
 .sidebar {
-	@include transition(all 300ms linear);
-	.push {
-		height: 140px;
-	}
-	.catalog {
-		margin-bottom: -140px;
-		min-height: 100%;
-	}
-	.footer {
-		position: relative;
-	}
+	
 }
 .baron__scrollerbar {
 	&:hover,
@@ -20,6 +10,7 @@
 }
 .sidebar.is-hidden {
 	left: -367px;
+	//@include transition(all 300ms linear);
 }
 .sidebar-key {
 	position: absolute;
