--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -1,6 +1,8 @@
 @import "lib/base";
 /* default layout */
 .l{
+	position: relative;
+	z-index: 2000;
 	width: 100%;
 	display: inline-block;
 	margin-bottom: 50px;
@@ -17,17 +19,4 @@
 // content
 .content{
 
-}
-// <aside>
-.sidebar{
-	position: relative;
-	padding-right: 22px;
-	float: left;
-	overflow: hidden;
-}
-.sidebar__wrap {
-	position: relative;
-	padding-left: 87px;
-	width: 280px;
-	background: #fcfcfc;
 }
