--- a/sass/_baron.scss
+++ b/sass/_baron.scss
@@ -11,13 +11,17 @@
 	.baron__scroller {
 		height: 100%;
 		overflow-y: scroll;
-			&::-webkit-scrollbar {
-				width: 0;
-			}
+		&::-webkit-scrollbar {
+			width: 0;
+		}
 	}
 	.baron{
 		.baron__scrollerbar {
 			display: block;
+			&:hover,
+			&:active {
+				background: #d6d6d6;
+			}
 		}
 	}
 		.baron__scrollerbar-wrapper {
@@ -46,4 +50,4 @@
 			&:hover{
 				opacity: .8;
 			}
-		}
+		}    
