--- a/sass/lib/_mixins.scss
+++ b/sass/lib/_mixins.scss
@@ -107,6 +107,12 @@ $break-large: 1180px;
 		@content;
 	}
 }
+// box-sizing
+@mixin box-sizing($var) {
+     -moz-box-sizing: $var;
+  -webkit-box-sizing: $var;
+          box-sizing: $var;
+}
 // sized sprites
 @mixin image-size($path){
 	width: image-width($path);
