--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -1,6 +1,8 @@
 @import "lib/base";
 /* default layout */
 .l{
+	position: relative;
+	z-index: 2000;
 	width: 100%;
 	display: inline-block;
 	margin-bottom: 50px;
@@ -13,4 +15,8 @@
 		float:left;
 		width: 280px;
 	}
+}
+// content
+.content{
+
 }
